# lumiRadio

./: .env.example  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  SONG_CHANGELOG.md  docker-compose.dev.yml  docker-compose.yml
.cargo/: config.toml
.github/workflows/: docker-lumiradio.yml
.sqlx/: query-00749d22c1567e875a6de5c23d11816ac39b2b037eb0c588e7318b44a1d54d37.json  query-052ec76c2a020789d8d2c99a53bb8a5862b9d750eb248320445dfd27965bc0e4.json  query-90fd0a97341d0033bded1a2570ce0571e0e55985c11947fbd2c65ea9a48b1ae9.json  query-bd2107234a3f4d008d6e1e61c27cf85ce9dd5924614a078b734c167ed7d65dc8.json  query-bd9e17d5ed65dd3dd8ca2e517f7cd77ac53620fbc355762a0ac85fb5984e1299.json
byers/: Cargo.toml
byers/src/: app_config.rs  main.rs  oauth2.rs  prelude.rs
byers/src/commands/: add_stuff.rs  chirp.rs  context.rs  currency.rs  help.rs  mod.rs  songs.rs  version.rs  youtube.rs
byers/src/event_handlers/: error.rs  message.rs  ready.rs
docker/liquidsoap/: script.liq
frohike/src/: main.rs
judeharley/: Cargo.toml
judeharley/examples/: playground.rs
judeharley/migrations/: 20240502115707_create_favourite_songs.down.sql  20240502115707_create_favourite_songs.up.sql
judeharley/src/: communication.rs  cooldowns.rs  custom_entities.rs  db.rs  lib.rs  prelude.rs
judeharley/src/controllers/: cans.rs  connected_youtube_accounts.rs  mod.rs  (+11 more)
langley/: Cargo.toml
langley/src/: main.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240506_215517_initial.rs  m20240530_174050_edit_users_change_watched_hours.rs
(+29 files in other folders)
