[workspace]
members = ["judeharley", "byers", "langley", "frohike", "migration"]
resolver = "2"

[workspace.package]
version = "1.2.0"
authors = ["cozyGalvinism <jean@der-capta.in>"]
edition = "2021"

[workspace.dependencies]
judeharley = { git = "https://github.com/lumiRadio/lumiRadio" }

[profile.release.package.byers]
debug = true
