[workspace]
members = ["judeharley", "byers", "langley", "frohike", "migration"]
resolver = "2"

[workspace.package]
version = "1.3.2"
authors = ["cozyGalvinism <jean@der-capta.in>"]
edition = "2021"

[workspace.dependencies]
judeharley = { git = "https://github.com/lumiRadio/lumiRadio" }

[profile.release.package.byers]
debug = true

[profile.release.package.judeharley]
debug = true
